--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ test/handler_unit_test/test_all/测试代码生成.py
 test/handler_unit_test/test_all/测试数据生成.py
 *.o
 test/executable_file/handler_test
+/data
+/TODO
