--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@
 test/handler_unit_test/test_all/测试代码生成.py
 test/handler_unit_test/test_all/测试数据生成.py
 *.o
-test/executable_file/handler_test
+test/executable_file
 /data
 /TODO
