add some comment

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
-/test/test_proto
-/test/other
-/DevDiary
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/settings.json
-.vscode/tasks.json
-test/handler_unit_test/test_all/测试代码生成.py
-test/handler_unit_test/test_all/测试数据生成.py
-*.o
+.vscode/
+
+test/test_proto
+test/other
+test/handler_unit_test/test_all/*.py
 test/executable_file
+
+*.o
+
 /data
 /TODO
