chore: 添加VSCode的项目配置，包括单元测试的编译与调试选项

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.vscode/
+# .vscode/
 
 test/test_proto
 test/other
@@ -7,5 +7,6 @@ test/executable_file/*
 
 *.o
 
-/data
-/TODO
+data
+TODO
+bin/*
